[package]
name = "ssdv-fec-gf-tables"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Estevez <daniel@destevez.net>"]
description = "SSDV systematic erasure FEC (Galois field table generator proc-macros)"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daniestevez/ssdv-fec/"
repository = "https://github.com/daniestevez/ssdv-fec/"
keywords = ["fec", "reed-solomon", "galois-field", "satellite", "erminaz"]
categories = ["aerospace::space-protocols"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
